Video upload/transcode simplification
